[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "uht-DMSlibrarian"
version = "0.1.0"
description = "Extension of the UMIC-seq Pipeline - Complete pipeline for dictionary building and NGS count inetgration, with fitness calculations, error modelling and mutation analysis"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Matt Penner", email = "mp957@cam.ac.uk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["bioinformatics", "pacbio", "umi", "sequencing", "variant", "calling"]
dependencies = [
    "biopython>=1.79,<2.0",
    "scikit-bio>=0.5.5,<0.8",
    "numpy>=1.21.0,<2.0",
    "pandas>=1.3.0,<3.0",
    "matplotlib>=3.5.0,<4.0",
    "seaborn>=0.11.0,<1.0",
    "scipy>=1.7.0,<2.0",
    "scikit-allel>=1.2.1,<2.0",
    "tqdm>=4.62.0",
    "psutil>=5.8.0",
]

[project.scripts]
umic-seq-pacbio = "uht_DMSlibrarian.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["uht_DMSlibrarian"]

[tool.setuptools.package-data]
uht_DMSlibrarian = ["*.py"]

